selfhost/test/typechecker/assignment/accessor_error_enum_variant.out
Error at %FILE_NAME%:5:5
Cannot assign to enum variant 'Bar'
  |  Foo.Bar = "abcd"
         ^
'Bar' is an enum variant, which cannot be overwritten
