selfhost/test/typechecker/assignment/accessor_error_enum_variant.abra
enum Foo {
  Bar
}

Foo.Bar = "abcd"